Header is ready

--- a/index.html
+++ b/index.html
@@ -5,11 +5,45 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700;800&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/media.css">
+  <title>Konstruct</title>
 </head>
 
 <body>
-  <div>hello world</div>
+  <header id="header" class="header">
+    <div class="container">
+      <a href="#"><img src="./img/logo.svg" class="logo" alt="Construct"></a>
+      <div class="offer">
+        <h1 class="offer__title">Partner with konstruct</h1>
+        <p class="offer__subtext">An award-winning construction management firm</p>
+      </div>
+      <a href="#" class="scroll">Scroll down</a>
+    </div>
+  </header>
+  <section id="nav" class="nav">
+    <div class="container">
+      <div class="menu">
+        <a href="#" class="menu__logo"><img src="./img/logo-black.svg" class="menu__logo" alt="Construct"></a></a>
+        <nav class="menu__nav">
+          <ul class="menu__list">
+            <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">About</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Work</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
