Our-story section is ready

--- a/index.html
+++ b/index.html
@@ -44,6 +44,39 @@
       </div>
     </div>
   </section>
+  <section id="our-story" class="our-story">
+    <div class="container">
+      <h2 class="our-story-title">Our story</h2>
+      <div class="line"></div>
+      <div class="about">
+        <div class="about__history">
+          <h3 class="about__history-title">Founded in 2011 by John Mathew Smith, <span>Konstruct</span> has become the
+            number
+            one construction management firm</h3>
+          <p class="about__history-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+            euismod
+            tincidunt ut laoreet dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            sed
+            diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        </div>
+        <ul class="about__abilities-list">
+          <li class="about__abilities-item">
+            <img src="./img/plan.jpg" alt="plan" class="about__abilities-plan">
+            <p class="about__abilities-text">We plan</p>
+          </li>
+          <li class="about__abilities-item">
+            <img src="./img/manage.jpg" alt="manage" class="about__abilities-manage">
+            <p class="about__abilities-text">We manage</p>
+          </li>
+          <li class="about__abilities-item">
+            <img src="./img/build.jpg" alt="build" class="about__abilities-build">
+            <p class="about__abilities-text">We build</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
