--- a/index.html
+++ b/index.html
@@ -76,7 +76,36 @@
       </div>
     </div>
   </section>
-
+  <section id="our-capabilities" class="our-capabilities">
+    <div class="container">
+      <div class="services-info">
+        <h2 class="services-info__title">Our capabilities</h2>
+        <p class="services-info__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+          euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        <a href="" class="services-info__link btn">All services</a>
+      </div>
+      <ul class="our-skills-list">
+        <li class="our-skills-list__item">
+          <img src=".//img/project.svg" alt="project" class="our-skills-list__img">
+          <h3 class="our-skills-list__title">Project and construction management</h3>
+          <p class="our-skills-list__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
+            nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        </li>
+        <li class="our-skills-list__item">
+          <img src="./img/structure.svg" alt="structure" class="our-skills-list__img">
+          <h3 class="our-skills-list__title">Structure audit and maintenance</h3>
+          <p class="our-skills-list__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
+            nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        </li>
+        <li class="our-skills-list__item">
+          <img src="./img/factory.svg" alt="factory" class="our-skills-list__img">
+          <h3 class="our-skills-list__title">Factory construction and modeling</h3>
+          <p class="our-skills-list__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
+            nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
 </body>
 
 </html>
