Call-to-action section is ready

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
       </ul>
     </div>
   </section>
+  <section id="call-to-action" class="call-to-action">
+    <div class="container">
+      <div class="question">
+        <h2 class="question__title">Want to build something amazing?</h2>
+        <a href="" class="question__button btn">Get in touch</a>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
