--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
       </div>
     </div>
   </section>
+  <section id="sending-mail" class="sending-mail">
+    <div class="container">
+      <div class="mailing">
+        <h2 class="mailing__title">
+          Newsletter Signup
+        </h2>
+        <form class="mailing__form">
+          <input type="text" placeholder="test@youremail.com" class="mailing__input">
+          <a href="#" class="mailing-button btn">Signup</a>
+        </form>
+
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
