--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
       </div>
     </div>
   </section>
+  <footer id="footer" class="footer">
+    <div class="container">
+      <ul class="footer-list">
+
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
