Last section is ready

--- a/index.html
+++ b/index.html
@@ -130,9 +130,89 @@
   </section>
   <footer id="footer" class="footer">
     <div class="container">
-      <ul class="footer-list">
+      <div class="footer-box">
+        <div class="footer-info">
+          <h5 class="footer-info__title footer-title">
+            Company
+          </h5>
+          <img src="./img/logo.svg" class="footer-info__logo" alt="Konstruct">
+          <p class="footer-info__text">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+            dolore magna aliquam erat.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h5 class="footer-links__title footer-title">
+            Links
+          </h5>
+          <ul class="footer-links__list">
+            <li class="footer-links__item">
+              <a href="#" class="footer-links__link">
+                Home
+              </a>
+              <a href="#" class="footer-links__link">
+                About
+              </a>
+              <a href="#" class="footer-links__link">
+                Services
+              </a>
+              <a href="#" class="footer-links__link">
+                Projects
+              </a>
+              <a href="#" class="footer-links__link">
+                Contact us
+              </a>
+            </li>
+            <li class="footer-links__item">
+              <a href="#" class="footer-links__link">
+                Faq
+              </a>
+              <a href="#" class="footer-links__link">
+                Terms
+              </a>
+              <a href="#" class="footer-links__link">
+                Careers
+              </a>
+            </li>
+            <li class="footer-links__item">
+              <a href="#" class="footer-links__link">
+                Blog
+              </a>
+              <a href="#" class="footer-links__link">
+                Partners
+              </a>
+              <a href="#" class="footer-links__link">
+                News
+              </a>
+            </li>
+          </ul>
+        </div>
 
-      </ul>
+        <div class="footer-contacts">
+          <h5 class="footer-contacts__title footer-title">Contact us</h5>
+          <div class="footer-contacts__about">
+            <p class="footer-contacts__address">213 Baker Street Oriel City Kounty 7000 KNW, Kountry Name</p>
+            <p class="footer-contacts__phone">+23 994 233 4022</p>
+            <a href="#" class="footer-contacts__email">info@konstruct.com</a>
+          </div>
+        </div>
+        <ul class="footer-networks">
+          <li class="footer-networks__item">
+            <a href="#"><img src="./img/facebook.svg" class="footer-networks__img" alt="facebook"></a>
+          </li>
+          <li class="footer-networks__item">
+            <a href="#">
+              <img src="./img/twitter.svg" class="footer-networks__img" alt="twitter">
+            </a>
+          </li>
+          <li class="footer-networks__item">
+            <a href="#"><img src="./img/google.svg" class="footer-networks__img" alt="google"></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-label">
+      © 2017 Konstruct Inc. Designed by Jane Kathryn Teo
     </div>
   </footer>
 </body>
