--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body>
   <header id="header" class="header">
     <div class="container">
-      <a href="#"><img src="./img/logo.svg" class="logo" alt="Construct"></a>
+      <a href="#" class="header-logo"><img src="./img/logo.svg" class="header-logo__img" alt="Konstruct"></a>
+      <div class="hamburger"><a href="#"><img src="./img/menu.svg" class="hamburger__img" alt="menu"></a></div>
       <div class="offer">
         <h1 class="offer__title">Partner with konstruct</h1>
         <p class="offer__subtext">An award-winning construction management firm</p>
@@ -31,7 +32,7 @@
   <section id="nav" class="nav">
     <div class="container">
       <div class="menu">
-        <a href="#" class="menu__logo"><img src="./img/logo-black.svg" class="menu__logo" alt="Construct"></a></a>
+        <a href="#" class="menu__logo"><img src="./img/logo-black.svg" class="menu__logo" alt="Konstruct"></a></a>
         <nav class="menu__nav">
           <ul class="menu__list">
             <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
@@ -211,8 +212,10 @@
         </ul>
       </div>
     </div>
-    <div class="footer-label">
-      © 2017 Konstruct Inc. Designed by Jane Kathryn Teo
+    <div class="container">
+      <div class="footer-label">
+        © 2017 Konstruct Inc. Designed by Jane Kathryn Teo
+      </div>
     </div>
   </footer>
 </body>
