Add JS and jQuery, make smooth scrolling

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
   <header id="header" class="header">
     <div class="container">
       <a href="#" class="header-logo"><img src="./img/logo.svg" class="header-logo__img" alt="Konstruct"></a>
-      <div class="hamburger"><a href="#"><img src="./img/menu.svg" class="hamburger__img" alt="menu"></a></div>
+      <div class="hamburger"><a href="#" class="hamburger__icon"><img src="./img/menu.svg" class="hamburger__img"
+            alt="menu"></a></div>
       <div class="offer">
         <h1 class="offer__title">Partner with konstruct</h1>
         <p class="offer__subtext">An award-winning construction management firm</p>
       </div>
-      <a href="#" class="scroll">Scroll down</a>
+      <a href="#our-story" class="scroll scrollto">Scroll down</a>
     </div>
   </header>
   <section id="nav" class="nav">
@@ -218,6 +219,8 @@
       </div>
     </div>
   </footer>
+  <script src="./jQuery/jQuery.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
