--- a/index.html
+++ b/index.html
@@ -18,8 +18,23 @@
   <header id="header" class="header">
     <div class="container">
       <a href="#" class="header-logo"><img src="./img/logo.svg" class="header-logo__img" alt="Konstruct"></a>
-      <div class="hamburger"><a href="#" class="hamburger__icon"><img src="./img/menu.svg" class="hamburger__img"
-            alt="menu"></a></div>
+      <div class="hamburger">
+        <a href="#" class="hamburger__icon">
+          <img src="./img/menu.svg" class="hamburger__img" alt="menu">
+        </a>
+        <nav class="hamburger__nav">
+          <ul class="hamburger__list">
+            <li class="hamburger__item"><a href="#header" class="menu__link hamburger__link scrollto">Home</a></li>
+            <li class="hamburger__item"><a href="#our-story" class="menu__link hamburger__link scrollto">About</a></li>
+            <li class="hamburger__item"><a href="#our-capabilities"
+                class="menu__link hamburger__link scrollto">Services</a></li>
+            <li class="hamburger__item"><a href="#call-to-action" class="menu__link hamburger__link scrollto">Work</a>
+            </li>
+            <li class="hamburger__item hamburger__item_last"><a href="#footer"
+                class="menu__link hamburger__link  scrollto">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="offer">
         <h1 class="offer__title">Partner with konstruct</h1>
         <p class="offer__subtext">An award-winning construction management firm</p>
@@ -30,7 +45,7 @@
   <section id="nav" class="nav">
     <div class="container">
       <div class="menu">
-        <a href="#" class="menu__logo"><img src="./img/logo-black.svg" class="menu__logo" alt="Konstruct"></a>
+        <a href="#" class="menu__logo"><img src="./img/logo-black.svg" alt="Konstruct"></a>
         <nav class="menu__nav">
           <ul class="menu__list">
             <li class="menu__item"><a href="#header" class="menu__link scrollto">Home</a></li>
